--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -192,6 +192,7 @@ foreach(CHAPTER ${CHAPTERS})
         )
         set(NAME "${CHAPTER}__${DEMO}")
         add_executable(${NAME} ${SOURCE})
+        install(TARGETS ${NAME} DESTINATION bin)
         target_link_libraries(${NAME} ${LIBS})
         if(WIN32)
             set_target_properties(${NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/${CHAPTER}")
@@ -214,7 +215,8 @@ foreach(CHAPTER ${CHAPTERS})
                 # configure_file(${SHADER} "test")
                 add_custom_command(TARGET ${NAME} PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SHADER} $<TARGET_FILE_DIR:${NAME}>)
             elseif(UNIX AND NOT APPLE)
-                file(COPY ${SHADER} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin/${CHAPTER})
+              file(COPY ${SHADER} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin/${CHAPTER})
+              install(FILES ${SHADER} DESTINATION bin)
             elseif(APPLE)
                 # create symbolic link for *.vs *.fs *.gs
                 get_filename_component(SHADERNAME ${SHADER} NAME)
@@ -229,3 +231,6 @@ foreach(CHAPTER ${CHAPTERS})
 endforeach(CHAPTER)
 
 include_directories(${CMAKE_SOURCE_DIR}/includes)
+
+
+install(DIRECTORY resources/textures/ DESTINATION resources/textures)
